# faux_lars

./: Cargo.toml  Makefile  README.md  benchmark-requirements.txt  dev-requirements.txt  pyproject.toml  run.py
benchmarks/: benchmark.ipynb
faux_lars/: __init__.py  utils.py
src/: data_type.rs  expressions.rs  lib.rs
tests/: test_generate.py
