[package]
name = "faux-lars"
version = "0.1.0"
edition = "2021"

[lib]
name = "faux_lars"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.40.0", features=["dtype-u8", "dtype-u16", "dtype-i8","dtype-i16"]}
fake = "2.9.2"
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

